--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -144,6 +144,7 @@
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 50px;
     .videoContainer {
       position: relative; 
       padding-bottom: 56.25%; 
@@ -162,7 +163,7 @@
   .quote {
     color: #ffffff;
     text-align: center;
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
     line-height: 1.6;
     font-size: clamp(20px, 3vw, 24px);
     img {
