--- a/styles/Endorsements.module.scss
+++ b/styles/Endorsements.module.scss
@@ -86,6 +86,19 @@
 .top_donors {
     padding-top: 100px;
     padding-bottom: 100px;
+    h2 {
+        text-align: center;
+        font-weight: 600;
+        line-height: 1.3;
+        font-size: clamp(20px, 3vw, 36px);
+        margin-bottom: 50px;
+    }
+    h3 {
+        text-align: center;
+        line-height: 1.5;
+        font-size: clamp(18px, 3vw, 24px);
+        margin-bottom: 30px;
+    }
     @include bp(tb) {
         padding-top: 50px;
         padding-bottom: 50px;
@@ -159,11 +172,18 @@
         padding-top: 50px;
         padding-bottom: 50px;
     }
+    // h2 {
+    //     text-align: center;
+    //     font-weight: 800;
+    //     line-height: 1.3;
+    //     font-size: clamp(20px, 3vw, 24px);
+    //     margin-bottom: 50px;
+    // }
     h2 {
         text-align: center;
-        font-weight: 800;
+        font-weight: 600;
         line-height: 1.3;
-        font-size: clamp(20px, 3vw, 24px);
+        font-size: clamp(20px, 3vw, 36px);
         margin-bottom: 50px;
     }
     &_grid {
