--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -134,6 +134,65 @@
   }
 }
 
+.twoColDark {
+  display: flex;
+  min-height: 800px;
+  background-color: #000000;
+  @include bp(hd) {
+    min-height: unset;
+  }
+  @include bp(dt) {
+    flex-direction: column;
+  }
+  > * {
+    flex: 1;
+  }
+  .textCol {
+    flex-basis: 40%;
+    padding: 100px 75px;
+    position: relative;
+    z-index: 1;
+    margin-left: -75px;
+    
+    color: #ffffff;
+    @include bp(dt) {
+      padding: 25px 25px 50px 25px;
+      margin-top: 0;
+      margin-left: 0;
+    }
+    @include bp(tb) {
+      padding: 0 20px 50px 20px;
+      margin-top: 25px;
+    }
+  }
+  .imgCol {
+    flex-basis: 60%;
+    position: relative;
+    img, video {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: 20%;
+      @include bp(dt) {
+        position: relative;
+      }
+    }
+    &::after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(0, 0, 0, 0.1) 75%, rgb(0, 0, 0) 100%);
+      @include bp(dt) {
+        background: unset;
+      }
+    }
+  }
+}
+
 .video {
   background: $color-primary;
   padding: 100px 75px;
@@ -169,6 +228,15 @@
     img {
       max-width: 250px;
     }
+  }
+}
+
+.quote {
+  line-height: 1.6;
+  font-size: clamp(20px, 3vw, 24px);
+  .small {
+    font-size: 16px;
+    font-weight: 700;
   }
 }
 
