--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -159,6 +159,7 @@
       padding: 25px 25px 50px 25px;
       margin-top: 0;
       margin-left: 0;
+      text-align: center;
     }
     @include bp(tb) {
       padding: 0 20px 50px 20px;
@@ -234,9 +235,12 @@
 .quote {
   line-height: 1.6;
   font-size: clamp(20px, 3vw, 24px);
+  font-weight: 300;
   .small {
     font-size: 16px;
     font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
   }
 }
 
